--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mail.properties.mail.smtp.starttls.required=true
+
+jwt.secret=qvLjI3yEGJfEoG9K2gGfIznbcYeJCMURp2+U02uKzZg=
