--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+rabbitmq.otp.queue=otp_queue
+rabbitmq.otp.exchange=user.otp.exchange
+rabbitmq.otp.routing-key=user.otp.routingkey
+
 # Spring Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
